--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kanban",
   "version": "0.0.1",
-  "description": "Just a simple kanban made in choo.js",
+  "description": "Just a simple kanban component made to choo.js",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open --port 3000",
@@ -17,6 +17,16 @@
   ],
   "author": "requeijo@ufmg.br",
   "license": "ISC",
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "choo": "^6.7.0",
+    "materialize-css": "^1.0.0-alpha.3",
+    "nanocomponent": "^6.5.0",
+    "sweetalert2": "^7.8.1",
+    "material-design-icons" : "*",    
+    "choo-devtools": "^2.3.3",
+    "sheetify": "^6.0.1"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -28,12 +38,5 @@
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "choo": "^6.7.0",
-    "materialize-css": "^1.0.0-alpha.3",
-    "nanocomponent": "^6.5.0",
-    "sweetalert2": "^7.8.1"
   }
 }
